Bug 11960 - GetNCChanges is very slow with large numbers of links, and incorrect per windows
Summary: GetNCChanges is very slow with large numbers of links, and incorrect per windows
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: AD: LDB/DSDB/SAMDB (show other bugs)
Version: 4.4.3
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Andrew Bartlett
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-10 00:50 UTC by Andrew Bartlett
Modified: 2016-07-29 00:06 UTC (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew Bartlett 2016-06-10 00:50:41 UTC
The sorting of linked attributes in GetNCChanges is inefficient and can be made much faster.  It is also incorrect per Windows.
Comment 1 Andrew Bartlett 2016-07-29 00:06:28 UTC
Fixed in a896a92444f744a89e70bfcd7e4ed55061ce4235 and 8dc3110a5f27cf2f45949cf48cb055a59dc9454e.

Re-open if there is any desire to backport this to 4.4, but 4.5 is needed for any sensible install with a large number of links, due to other issues.